Upgraded to Java 11 and Vaadin 23.3.28