@@ -104,7 +104,7 @@ public class EditExcelWriterPanel extends AbstractComponentEditPanel {
 
             Collections.sort(attributes, new Comparator<RecordFormat>() {
                 public int compare(RecordFormat o1, RecordFormat o2) {
-                    return new Integer(o1.getOrdinalSetting()).compareTo(new Integer(o2.getOrdinalSetting()));
+                    return Integer.valueOf(o1.getOrdinalSetting()).compareTo(Integer.valueOf(o2.getOrdinalSetting()));
                 }
             });
 
